# PhigrosLibrary

./: .gitignore  CMakeLists.txt  PhigrosLibrary.md  README-PhigrosLibrary.md  README-PhigrosRpc.md  README.md  avatar.txt  build.cmd  build.gradle  build.sh  collection.csv  collection.tsv  collection.txt  difficulty.csv  difficulty.tsv  illustration.txt  info.csv  info.tsv  music-info.json  phigros.h  phigros.thrift  phigrosLibrary.thrift  settings.gradle  single.txt  thrift.sh  tips.txt
PhigrosLibrary/: build.gradle
clientExample/: README.md  phigros.py
cpp/: phigros.cpp
illustration/: 996.李化禹.png.REMOVED.git-id  AfterDawn.S9ryne.png.REMOVED.git-id  Aleph0.LeaF.png.REMOVED.git-id  AnotherMe.DAAN.png.REMOVED.git-id  AnotherMe.NeutralMoon.png.REMOVED.git-id  AnotherRound.JustinDai.png.REMOVED.git-id  Aphasia.闫东炜.png.REMOVED.git-id  Apocalypse.アリスシャッハと魔法の楽団.png.REMOVED.git-id  Apocalyptic.ZClaxxSumaiLight.png.REMOVED.git-id  Ark.kanoryo.png.REMOVED.git-id  Arkhei.SeraAmagi.png.REMOVED.git-id  Aventyr.GrandThawRigelTheatre.png.REMOVED.git-id  BelieveLightfeat果丸哒呦.ScalerMestie果丸哒呦.png.REMOVED.git-id  BetterGraphicAnimation.ルゼ.png.REMOVED.git-id  BonusTime.MegaloPaleWhite.png.REMOVED.git-id  BraveNotes.TurquoiseDRIVENota.png.REMOVED.git-id  BreakOver.Kforest.png.REMOVED.git-id  BreakThroughTheBarrier.lixound.png.REMOVED.git-id  Burn.NceS.png.REMOVED.git-id  CROSSSOUL.HyuNfeatSyepias.png.REMOVED.git-id  Cereris.SunsetRayNceS.png.REMOVED.git-id  CervelleConnexion.SCTL.png.REMOVED.git-id  Chronologika.Hundotte.png.REMOVED.git-id  Chronomia.Lime.png.REMOVED.git-id  ChronosCollapseLaCampanella.SunsetRay.png.REMOVED.git-id  Chronostasis.黒皇帝.png.REMOVED.git-id  Cipher20.TetrajectoryfeatCtymax.png.REMOVED.git-id  ClassMemories.AntistarfeatCtymax.png.REMOVED.git-id  ClockParadox.WyvernP.png.REMOVED.git-id  ColorfulDays.P4koofeatつゆり花鈴.png.REMOVED.git-id  Concvssion.Halv.png.REMOVED.git-id  CraveWave.LandRoot.png.REMOVED.git-id  Cthugha.USAO.png.REMOVED.git-id  DESTRUCTION321.Normal1zervsBrokenNerdz.png.REMOVED.git-id  Dash.小红Akane李祥辉.png.REMOVED.git-id  DataErr0r.Cosmograph.png.REMOVED.git-id  DeadSoul.SoundSouler.png.REMOVED.git-id  Demiurge.Rabpit.png.REMOVED.git-id  Demonkin.ForgedReigns.png.REMOVED.git-id  Disorder.HyuNfeatYURI.png.REMOVED.git-id  (+129 more)
nodejs/: README.md  binding.gyp  build.cmd  difficulty.csv  hello.js  hello.mjs  helloworld.mjs  main.c  main.cpp
py/: PhigrosLibrary.py  README.md  difficulty.csv  requirement.txt  test.py
python/: README.md  helloworld.py  main.c  setup.py
script-py/: PhigrosLibrary.py  test.py
src/: phigros.c  (+5 more)
(+54 files in other folders)
