cmake_minimum_required(VERSION 3.5.0)
project(PhigrosLibrary)
if (CMAKE_C_COMPILER_ID STREQUAL "MSVC")
	add_compile_options(/MT)
endif()
set(ENABLE_COMMONCRYPTO OFF CACHE BOOL ENABLE_COMMONCRYPTO)
set(ENABLE_GNUTLS OFF CACHE BOOL ENABLE_GNUTLS)
set(ENABLE_MBEDTLS OFF CACHE BOOL ENABLE_MBEDTLS)
set(ENABLE_OPENSSL OFF CACHE BOOL ENABLE_OPENSSL)
set(BUILD_SHARED_LIBS OFF CACHE BOOL BUILD_SHARED_LIBS)
set(LIBZIP_DO_INSTALL OFF CACHE BOOL LIBZIP_DO_INSTALL)
add_subdirectory(libzip)

include_directories(src)
add_library(phigros SHARED src/cJSON.c src/save.c src/phigros.cxx)
if (CMAKE_C_COMPILER_ID STREQUAL "MSVC")
	target_link_libraries(phigros zip ../../libssl ../../libcrypto Ws2_32 Crypt32)
elseif(CMAKE_C_COMPILER_ID STREQUAL "GNU")
	target_link_libraries(phigros zip ssl crypto)
endif()
